tests/ui/associated-consts/projection-unspecified-but-bounded.stderr
error[E0271]: type mismatch resolving `<T as TraitWAssocConst>::A == 32`
  --> $DIR/projection-unspecified-but-bounded.rs:12:11
   |
LL |     foo::<T>();
   |           ^ expected `32`, found `<T as TraitWAssocConst>::A`
   |
   = note: expected constant `32`
              found constant `<T as TraitWAssocConst>::A`
note: required by a bound in `foo`
  --> $DIR/projection-unspecified-but-bounded.rs:9:28
   |
LL | fn foo<T: TraitWAssocConst<A = 32>>() {}
   |                            ^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
